fixed bug where scrollbar was broken

--- a/autoscheduler/frontend/src/components/SchedulingPage/CourseSelectColumn/CourseSelectCard/ExpandedCourseCard/SectionSelect/SectionSelect.css
+++ b/autoscheduler/frontend/src/components/SchedulingPage/CourseSelectColumn/CourseSelectCard/ExpandedCourseCard/SectionSelect/SectionSelect.css
@@ -259,6 +259,7 @@
     flex-direction: column;
     width: 100%;
     height: fit-content;
+    max-height: 100%;
 }
 .table-container .MuiCollapse-container {
     display: flex !important;
